# ai4peace

./: .gitignore  ARCHITECTURE.md  README.md  example_drone_simulation.py  first_test_3.txt  pyproject.toml  simulate.py
ai4peace/: README.md  __init__.py  __main__.py  cardgame_example.py  new_architecture_draft.py  new_architecture_runner.py  research_strategy_game_mechanics.py  research_strategy_scenario_basic_ai_race.py  research_strategy_scenario_drones.py  utils.py
ai4peace/core/: __init__.py  actions.py  agent.py  game_state.py  gamemaster.py  memory.py  new_architecture_draft.py  new_architecture_runner.py  simulation.py  simulation_runner.py  utils.py
ai4peace/core_v2/: __init__.py  cardgame_example.py  new_architecture_draft.py  new_architecture_runner.py  research_strategy_actions.py  research_strategy_game_mechanics.py  research_strategy_scenario_basic_ai_race.py  research_strategy_scenario_drones.py  test_tools.py  wargame_actions.py  wargame_gamemaster.py  wargame_player.py  wargame_scenarios.py  wargame_state.py  wargame_updates.py
ai4peace/scenarios/: __init__.py  base.py  basic_ai_race.py  drone_arms_control.py
tests/: test_integration.py  test_responses.py
